# itemized-os

./: .env  .gitmodules  Makefile  README.md  index.html  package-lock.json  package.json  pm2.config.js  schema.graphql  tailwind.config.js  tsconfig.json  vite.config.ts
db/: Cargo.toml
db/src/: main.rs
extension/content-scripts/: content-script.js  popup.js
src/: app.tsx  graph.tsx  index.css  main.tsx
src/graphql-tag/: types.ts
src/graphql-tag/core/: gqlClient.tsx  gqlFragmentObserver.ts
src/graphql-tag/relay-compile-tag/: graphql-tag.tsx  transforms.tsx
src/system/zeus/: const.ts  index.ts  reactQuery.ts
system/: Dockerfile  Makefile  alexandria_api.ts  data.json  deps.js  fly.toml  graphql_api.ts  main.ts  os-client.ts  schema.graphql  script.ts
system/db/src/: main.rs
system/os/: indradb.d.ts  indradb.js  indradb_bg.wasm  indradb_bg.wasm.d.ts  package.json
