[package]
name = "alexandria"
version = "1.0.0"
description = "A personal operating system"
repository = "https://github.com/indradb/indradb"
keywords = ["graph", "database"]
categories = ["database", "database-implementations"]
edition = "2021"
readme = "README.md"

[lib]
name = "indradb"
path = "src/main.rs"
crate-type = ["cdylib"]

[profile.release]
debug = true


[dependencies]
indradb-lib = "3"
wasm-bindgen = { version = "0.2.79", features = ["serde-serialize"] }
js-sys = "0.3.0"
uuid = "0.8.2"
console_error_panic_hook = "0.1.6"
serde_json = "1.0.79"
serde = "*"

[dependencies.web-sys]
version = "0.3"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  'console'
]

[dependencies.chrono]
version = "0.4"
features = ["serde", "wasmbind"]